--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section class="hero">
+        <section class="hero">
+            <div class="container">
                 <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
                 <button class="pointer" type="button">Заказать услугу</button>
-            </section>
-        </div>
-        <div class="container">
-            <section class="section">
+            </div>    
+        </section>
+        <section class="section">
+            <div class="container">
                 <h2 class="company" >
                 Преймущества компании
                 </h2>
@@ -59,11 +59,10 @@
                             <p class="advantages-list">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
-            
-            </section>
-        </div>
-        <div class="container">
-            <section class="feature">
+            </div>
+        </section>
+        <section class="feature">
+            <div class="container">
                 <h2 class="title-work">Чем мы занимаемся</h2>
                 <ul class="occupation list">
                     <li class="picture">
@@ -76,10 +75,11 @@
                         <img src="./images/box3.jpg" alt="Анализ" width="370" height="294">
                     </li>
                 </ul>
-            </section>
+            </div>    
+        </section>
         </div>
-        <div class="container">
-            <section class="team">
+        <section class="team">
+            <div class="container">
                 <h2 class="title-time">Наша команда</h2>
                 <ul class="down list">
                     <li class="members">
@@ -103,26 +103,28 @@
                         <p class="job-title">UI Designer</p>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
             <a href="./index.html">
             <p class="logo-footer"><span class="firstpart-logo">Web</span><span class="footer-logo">Studio</span></p>
             </a>
-            <ul class="footer list">
-                <li>
-                    <a href="https://www.google.com.ua/maps/place/%D0%BF%D1%80%D0%BE%D1%81%D0%BF.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D1%87%D1%83%D0%B3,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+39600/@49.1421001,33.4338237,17z/data=!3m1!4b1!4m5!3m4!1s0x40d751fbcc1c9d37:0x5b9c293fe18df2ba!8m2!3d49.1420966!4d33.4360124?hl=ru"
-                        class="map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="mail">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380981111111" class="telefon">+38 099 111 11 11</a>
-                </li>
-            </ul>
+            <address class="address">
+                <ul class="footer list">
+                    <li>
+                        <a href="https://www.google.com.ua/maps/place/%D0%BF%D1%80%D0%BE%D1%81%D0%BF.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D1%87%D1%83%D0%B3,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+39600/@49.1421001,33.4338237,17z/data=!3m1!4b1!4m5!3m4!1s0x40d751fbcc1c9d37:0x5b9c293fe18df2ba!8m2!3d49.1420966!4d33.4360124?hl=ru"
+                            class="map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="mail">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380981111111" class="telefon">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
     </footer>
 </body>
