--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-        <section class="all">
+        <section class="section">
             <div class="container">
                 <!--<h1>Портфолио</h1>-->  
                 <ul class="midlle list">
@@ -40,52 +40,70 @@
                     <li class="button"><button class="filter" type="button">Дизайн</button></li>
                     <li class="button"><button class="filter" type="button">Маркетинг</button></li>
                 </ul>
-                <div class="">
+                <div >
                     <ul class="flex-container list">
                         <li class="portfolio">
                             <img src="./images/img5.jpg" alt="Технокряк" width="370" height="294">
-                            <h2 class="title-list">Технокряк</h2>
-                            <p class="different">Веб-сайт</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Технокряк</h2>
+                                <p class="different">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img6.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                            <h2 class="title-list">Постер New Orlean vs Golden Star</h2>
-                            <p class="different">Дизайн</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Постер New Orlean vs Golden Star</h2>
+                                <p class="different">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img7.jpg" alt="Ресторан Seafood" width="370" height="294">
-                            <h2 class="title-list">Ресторан Seafood</h2>
-                            <p class="different">Приложение</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Ресторан Seafood</h2>
+                                <p class="different">Приложение</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img8.jpg" alt="Проект Prime" width="370" height="294">
-                            <h2 class="title-list">Проект Prime</h2>
-                            <p class="different">Маркетинг</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Проект Prime</h2>
+                                <p class="different">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img9.jpg" alt="Проект Boxes" width="370" height="294">
-                            <h2 class="title-list">Проект Boxes</h2>
-                            <p class="different">Приложение</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Проект Boxes</h2>
+                                <p class="different">Приложение</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img10.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                            <h2 class="title-list">Inspiration has no Borders</h2>
-                            <p class="different">Веб-сайт</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Inspiration has no Borders</h2>
+                                <p class="different">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img11.jpg" alt="Издание Limited Edition" width="370" height="294">
-                            <h2 class="title-list">Издание Limited Edition</h2>
-                            <p class="different">Дизайн</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Издание Limited Edition</h2>
+                                <p class="different">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img12.jpg" alt="Проект LAB" width="370" height="294">
-                            <h2 class="title-list">Проект LAB</h2>
-                            <p class="different">Маркетинг</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Проект LAB</h2>
+                                <p class="different">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio">
                             <img src="./images/img13.jpg" alt="Growing Business" width="370" height="294">
-                            <h2 class="title-list">Growing Business</h2>
-                            <p class="different">Приложение</p>
+                            <div class="characteristic">
+                                <h2 class="title-list">Growing Business</h2>
+                                <p class="different">Приложение</p>
+                            </div>
                         </li>
                     </ul>
                 </div>    
@@ -94,20 +112,29 @@
             
     </main>
     <footer>
-        <div class="container">
-            <a href="./index.html"><p class="logo-footer"><span class="firstpart-logo">Web</span><span class="footer-logo">Studio</span></p></a>
-                <ul class="footer list">
-                    <li>
-                        <a href="https://www.google.com.ua/maps/place/%D0%BF%D1%80%D0%BE%D1%81%D0%BF.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D1%87%D1%83%D0%B3,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+39600/@49.1421001,33.4338237,17z/data=!3m1!4b1!4m5!3m4!1s0x40d751fbcc1c9d37:0x5b9c293fe18df2ba!8m2!3d49.1420966!4d33.4360124?hl=ru" class="map" target="_blank"  rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="mail">info@example.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380981111111" class="telefon">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-        </div>        
-     </footer>
+        <section class="section">
+            <div class="container">
+                <a href="./index.html">
+                    <p class="logo-footer"><span class="firstpart-logo">Web</span><span class="footer-logo">Studio</span>
+                    </p>
+                </a>
+                <address class="address">
+                    <ul class="footer list">
+                        <li>
+                            <a href="https://www.google.com.ua/maps/place/%D0%BF%D1%80%D0%BE%D1%81%D0%BF.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D1%87%D1%83%D0%B3,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+39600/@49.1421001,33.4338237,17z/data=!3m1!4b1!4m5!3m4!1s0x40d751fbcc1c9d37:0x5b9c293fe18df2ba!8m2!3d49.1420966!4d33.4360124?hl=ru"
+                                class="map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a href="mailto:info@devstudio.com" class="mail">info@example.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380981111111" class="telefon">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </section>
+    
+    </footer>
 </body>
 </html>
