--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
     </main>
     <footer>
-        <section class="section">
+        <section>
             <div class="container">
                 <a href="./index.html">
                     <p class="logo-footer"><span class="firstpart-logo">Web</span><span class="footer-logo">Studio</span></p>
