--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>    
         </section>
         
-        <section class="team">
+        <section class="section team">
             <div class="container">
                 <h2 class="title-time">Наша команда</h2>
                 <ul class="down list">
